# file-validator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: mirror.yml
docs/: release_notes.md
fw_gear_file_validator/: errors.py  loader.py  validator.py
tests/: test_errors.py  test_loader.py  test_validator.py
