[project]
name = "fw_gear_file_validator"
version = "0.3.6"
description = "Validates a file"
authors = [{ name = "flywheel", email="support@flywheel.io" }]
requires-python = "~=3.13"
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears",
]
classifiers = ["Topic :: Scientific/Engineering"]
dependencies = [
    "fw-file>=3.3.3,<4",
    "flywheel-gear-toolkit>=0.6.10,<0.7",
    "flywheel-sdk>=20.3.0",
    "argparse==1.4.0",
    "pydantic>=2.4.2,<3",
]

[project.urls]
Repository = "https://gitlab.com/flywheel-io/scientific-solutions/gears/file-validator"

[dependency-groups]
dev = [
    "ipython>=8.11.0,<9",
    "pytest>=8.0.2,<9",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.12.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
